--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,24 +5,27 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "build" : "npm i",
-   "server" : "nodemon index.js"
-   
-   
-
-
-
+    "start": "node server.js",
+    "build": "npm i",
+    "server": "nodemon server.js",
+    "dev": "nodemon server.js"
   },
-  "engines": {"node":"v20.4.0"},
+  "engines": {
+    "node": "v20.4.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
+    "netlify-cli": "^12.7.2",
+    "netlify-lambda": "^2.0.15",
     "nodemon": "^3.0.1",
-    "netlify-cli" : "^12.7.2",
-    "netlify-lambda" : "^2.0.15",
-    "serverless-http" : "^2.7.0"
-  }}
+    "serverless-http": "^2.7.0",
+    "razorpay": "^2.8.6"
+  }
+}
