--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^7.4.0",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
+    "razorpay": "^2.8.6",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
