--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,12 +20,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.0",
     "netlify-cli": "^12.7.2",
     "netlify-lambda": "^2.0.15",
     "nodemon": "^3.0.1",
-    "serverless-http": "^2.7.0",
-    "razorpay": "^2.8.6"
+    "razorpay": "^2.8.6",
+    "serverless-http": "^2.7.0"
   }
 }
