--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "build": "npm i",
-    "server": "nodemon server.js",
+    "server": "nodemon server.js"
     
   },
   "engines": {
